@@ -25,6 +25,8 @@ Extension Modules
 Library
 -------
 
+- optparse now optionally imports gettext.  This allows its use in setup.py.
+
 - the deprecated tzparse module was removed.
 
 - the pickle module no longer uses the deprecated bin parameter.
